tests/baselines/reference/asyncGenerators.functionDeclaration.7.es6.errors.txt
tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.7.es6.ts(1,24): error TS2523: 'yield' expressions cannot be used in a parameter initializer.


==== tests/cases/conformance/asyncGenerators/es6/functionDeclarations/asyncGenerators.functionDeclaration.7.es6.ts (1 errors) ====
    async function * f(a = yield) {}
                           ~~~~~
!!! error TS2523: 'yield' expressions cannot be used in a parameter initializer.